# microsservice-nightmare

./: Cargo.toml  tester.sh
cli/: Cargo.toml
cli/src/: main.rs
packet/: Cargo.toml
packet/src/: lib.rs
server/: Cargo.toml
server/src/: http_router.rs  main.rs  message_parser.rs  prelude.rs  service_attacher.rs
server/src/utils/: mod.rs  parse_services_lua_table.rs
