[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.15.1"
env_logger = "0.10.0"
log = "0.4.17"
tokio = { version = "1.24.2", features = ["full"] }
packet = { path = "../packet" }
lazy_static = "1.4.0"
thiserror = "1.0.38"
uuid = { version = "1.2.2", features = ["v4"] } 
